[package]
name        = "doubao-api"
description = "Async HTTP client for the Doubao / Volcengine API"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
doubao-core  = { path = "../doubao-core" }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
reqwest      = { workspace = true }
futures      = { workspace = true }
anyhow       = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true }
tracing      = { workspace = true }
bytes        = "1"
