[package]
name        = "doubao-cli"
description = "dbclaw — blazing-fast Doubao AI terminal client"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "dbclaw"
path = "src/main.rs"

[dependencies]
doubao-core = { path = "../doubao-core" }
doubao-api  = { path = "../doubao-api" }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
futures     = { workspace = true }
clap        = { version = "4", features = ["derive", "env"] }
rustyline   = "13"
colored     = "2"
dirs        = "5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
